Backend/api-gateway/gateway_service/Manifestfile/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 8005
      targetPort: 8005
      protocol: TCP
